--- a/Numpy/Numpy_poc.ipynb
+++ b/Numpy/Numpy_poc.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -16,7 +18,9 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -40,7 +44,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -53,7 +59,9 @@
    "cell_type": "code",
    "execution_count": 153,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -91,7 +99,9 @@
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -114,7 +124,9 @@
    "cell_type": "code",
    "execution_count": 108,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -152,7 +164,9 @@
    "cell_type": "code",
    "execution_count": 145,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -187,7 +201,9 @@
    "cell_type": "code",
    "execution_count": 138,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -207,7 +223,9 @@
    "cell_type": "code",
    "execution_count": 139,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -230,7 +248,9 @@
    "cell_type": "code",
    "execution_count": 140,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -252,7 +272,9 @@
    "cell_type": "code",
    "execution_count": 141,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -276,7 +298,9 @@
    "cell_type": "code",
    "execution_count": 172,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -312,7 +336,9 @@
    "cell_type": "code",
    "execution_count": 184,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -351,7 +377,9 @@
    "cell_type": "code",
    "execution_count": 193,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -370,6 +398,191 @@
     "spltv = np.vsplit(a,2) # Two way split vertical\n",
     "print(splt[0])\n",
     "print(spltv[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[[ 1.,  1.,  1.,  1.,  1.],\n",
+       "          [ 1.,  1.,  1.,  1.,  1.],\n",
+       "          [ 1.,  1.,  1.,  1.,  1.],\n",
+       "          [ 1.,  1.,  1.,  1.,  1.]],\n",
+       "\n",
+       "         [[ 1.,  1.,  1.,  1.,  1.],\n",
+       "          [ 1.,  1.,  1.,  1.,  1.],\n",
+       "          [ 1.,  1.,  1.,  1.,  1.],\n",
+       "          [ 1.,  1.,  1.,  1.,  1.]],\n",
+       "\n",
+       "         [[ 1.,  1.,  1.,  1.,  1.],\n",
+       "          [ 1.,  1.,  1.,  1.,  1.],\n",
+       "          [ 1.,  1.,  1.,  1.,  1.],\n",
+       "          [ 1.,  1.,  1.,  1.,  1.]]],\n",
+       "\n",
+       "\n",
+       "        [[[ 1.,  1.,  1.,  1.,  1.],\n",
+       "          [ 1.,  1.,  1.,  1.,  1.],\n",
+       "          [ 1.,  1.,  1.,  1.,  1.],\n",
+       "          [ 1.,  1.,  1.,  1.,  1.]],\n",
+       "\n",
+       "         [[ 1.,  1.,  1.,  1.,  1.],\n",
+       "          [ 1.,  1.,  1.,  1.,  1.],\n",
+       "          [ 1.,  1.,  1.,  1.,  1.],\n",
+       "          [ 1.,  1.,  1.,  1.,  1.]],\n",
+       "\n",
+       "         [[ 1.,  1.,  1.,  1.,  1.],\n",
+       "          [ 1.,  1.,  1.,  1.,  1.],\n",
+       "          [ 1.,  1.,  1.,  1.,  1.],\n",
+       "          [ 1.,  1.,  1.,  1.,  1.]]]]])"
+      ]
+     },
+     "execution_count": 216,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.ones((1,2,3,4,5))\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[ 1.,  1.,  1.,  1.],\n",
+       "         [ 1.,  1.,  1.,  1.],\n",
+       "         [ 1.,  1.,  1.,  1.]]],\n",
+       "\n",
+       "\n",
+       "       [[[ 1.,  1.,  1.,  1.],\n",
+       "         [ 1.,  1.,  1.,  1.],\n",
+       "         [ 1.,  1.,  1.,  1.]]]])"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.ones((2,1,3,4))\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Understanding slicing and dicing:\n",
+    "array[start:stop:slice] -- > This is specified for every dimension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 1)"
+      ]
+     },
+     "execution_count": 236,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.array([[[1],[2],[3]], \n",
+    "              [[4],[5],[6]]\n",
+    "             ])\n",
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[4],\n",
+       "        [5],\n",
+       "        [6]]])"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[1:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3)"
+      ]
+     },
+     "execution_count": 251,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = np.array([[1,2,3],[3,4,5]])\n",
+    "y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2],\n",
+       "       [4]])"
+      ]
+     },
+     "execution_count": 269,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y[:,1:2]"
    ]
   }
  ],
